# nat20

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  provenance.yml  release.yml
docs/: api.md  comparison.md  index.md  llms.txt  quickstart.md
docs/concepts/: activities.md  combat.md  effects.md  grid.md
docs/dev/: coverage-audit.md
examples/: README.md  build_party_member.py  grid_combat.py  skill_check.py
