[project]
name = "nat20-workspace"
version = "0"
description = "Nat20 — D&D 5e SRD 5.2 rules engine + dataset (workspace root; not a published package)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=11.0",
]
